--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,25 +34,19 @@ body{
 .full-width{
   width: 100%;
 }
-.contenidor-centre{
-  width: 100%;
-  @include no-space;
-  @include clearfix;
-}
 .contenidor-esquerra{
   @include span-columns(6);
-  padding-top: 60px;
-  padding-bottom: 50px;
-  min-height: 660px;
+  min-height: 600px;
   background-color: white;
   position: relative;
 }
 .contenidor-dreta{
   @include span-columns(6);
-  padding-top: 60px;
-  padding-bottom: 60px;
-   min-height: 660px;
+  min-height: 600px;
   background-color: white;
+}
+ul{
+  @include no-space;
 }
 /* ==========================================================================
    Menu Principal
@@ -152,38 +146,6 @@ nav ul li a:hover{
     border-radius: 2px;
     margin: 40px auto 0 auto;
 }
-/* Sweep To Right de blanc a blau*/
-.hvr-sweep-to-right {
-  display: block;
-  vertical-align: middle;
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  position: relative;
-  transition: color .3s;
-}
-
-.hvr-sweep-to-right:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #2951a7;
-  transform: scaleX(0);
-  transform-origin: 0 50%;
-  transition: transform .3s ease-out;
-}
-.hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
-  color: white;
-}
-.hvr-sweep-to-right:hover:before, .hvr-sweep-to-right:focus:before, .hvr-sweep-to-right:active:before {
-  transform: scaleX(1);
-}
-//
 .hero{
     background: #fcfcfc url("../img/hero-bg-desktop.jpg") center bottom no-repeat;
     height: 90vh;
@@ -191,8 +153,6 @@ nav ul li a:hover{
     // border-bottom: 1px solid #eeeeee;
     padding-top: 50px;
 }
-
-
 .serveis-clients{
   @include outer-container($max-width);
   padding: 0 40px;
@@ -211,7 +171,8 @@ nav ul li a:hover{
                 }
     // 
     @include media($l) {
-       
+        padding-top: 100px;
+        padding-bottom: 100px;
                 }
     // 
 }
@@ -247,13 +208,11 @@ h5{
   padding: 0;
   list-style-type: none;
   border: 1px solid #f5f5f5;
-  @include span-columns(5.5 of 6); 
+  @include span-columns(5 of 6); 
 }
 .llista{
   @include opensans(400, 1.6em);
-  padding-top:15px;
-  padding-left:15px;
-  padding-bottom:15px;
+  padding:19px 15px;
   border-bottom: 1px solid #f5f5f5;
 }
 .blue-dash{
@@ -300,19 +259,15 @@ li:last-child{
 .marc-foto-1{
   width: 190px;
   height: 365px;
-  margin: auto; 
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-      // Media Queries 
+    // Media Queries 
     @include media($m) {
       @include span-columns(4 of 6);
     }
     @include media($l) {
-      height: 545px;
+      height: 610px;
       @include span-columns(4 of 6);
+      @include shift(1);
     }
     //
 }
@@ -353,51 +308,63 @@ li:last-child{
   margin: -1px auto auto auto;
   background-color: white;
   border: 1px solid #f2f2f2;
-  box-sizing: border-box;
+  box-sizing: border-box; //serveix per contar el borde com a part interna de la caixa
  // Media Queries
       @include media($m) {
                 }
     // 
     @include media($l) {
-                
+          padding-top: 100px;
+          padding-bottom: 100px;
                 }
     // 
 }
 .esquerra{
-  @include shift(.5);
+  @include span-columns(5 of 6);
+  @include shift(1);
 }
 #autonoms .stroke-titol{
   width: 390px;
   margin-top: 4px;
   border-bottom: 2px solid #f5f5f5;
+} 
+#autonoms .serveis{
+  @include span-columns(5 of 6);
+  @include shift(1);
 }
 
 //Contenidors fotos
-.marc-foto-2{
-  width: 427px;
+.marc-foto-2{ 
+  background-color: #2951a7;
+  // Media Queries
+      @include media($m) {
+                }
+    // 
+    @include media($l) {
+          @include span-columns(4 of 6);
+          @include shift(1);
+          height: 270px;
+                }
+    // 
+}
+.marc-foto-3{
   height: 270px;
   background-color: #2951a7;
-  // box-shadow:  3px rgba(0, 0, 0, 0.3),  3px rgba(0, 0, 0, 0.3);
-   
-  // position: relative;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
-
-      // Media Queries 
-    // @include media($m) {
-    //   width: 192px;
-    //   height: 370px;
-    //   position: absolute;
-    //   right: 0;
-    // }
+  
+  // Media Queries
+      @include media($m) {
+                }
+    // 
     @include media($l) {
-      width: 427px;
-      height: 270px;
-      margin: 100px auto;
-    }
-    //
+          @include span-columns(4 of 6);
+          @include shift(1);
+          height: 270px;
+          margin-top: 70px;
+                }
+    // 
 }
+
+
 
 //FORMA
 .forma2{
@@ -451,24 +418,44 @@ PIMES i Startups
                 }
     // 
     @include media($l) {
-                
+          padding-top: 100px;
+          padding-bottom: 100px;
                 }
     // 
 }
-
-//FOTOS
+.top-fotos{
+  @include outer-container;
+  @include clearfix;
+  // Media Queries
+      @include media($m) {
+                }
+    // 
+    @include media($l) {
+                }
+    // 
+}
+.contenidor-centre{
+  @include span-columns(10);
+  @include shift (1);
+  z-index: 999;
+  position: relative;
+}
 .bloc{
-  width:33.33%;
-  float:left;
-  height: 260px;
-  background-color: green;
-  z-index: 9; 
-  margin: 60px auto;
-  padding: 0 10px 0 10px;
+  @include span-columns(1 of 3);
+  height: 258px; 
+  background-color: yellow;
+}
+.rectangle-gris{
+  @include span-columns(11);
+  @include shift (.5);
+  height: 160px;
+  background-color:#f7f7f7;
+  z-index: 1; 
+  margin-top: -210px;
 }
 
+
 .image4{
-   z-index: 99;
   // // MOBILE
   // background-image: url(../img/img1_S.jpg); 
   //     // RETINA
@@ -488,48 +475,98 @@ PIMES i Startups
  // DESKTOP
   @include media($l) {
 
-  background-image: url(../img/autonoms1_L.jpg);  
+  background-image: url(../img/pimes1_L.jpg);  
        // RETINA
         @include hidpi(2) {
-          background-image: url(../img/autonoms1_L_@2x.jpg);  
+          background-image: url(../img/pimes1_L_@2x.jpg);  
           background-size: 100%;
         }
       }
 
 }
 .image5{
-  
+    // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+
+  background-image: url(../img/pimes2_L.jpg);  
+       // RETINA
+        @include hidpi(2) {
+          background-image: url(../img/pimes2_L_@2x.jpg);  
+          background-size: 100%;
+        }
+      }
+
 }
 .image6{
-  
+  // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+
+  background-image: url(../img/pimes3_L.jpg);  
+       // RETINA
+        @include hidpi(2) {
+          background-image: url(../img/pimes3_L_@2x.jpg);  
+          background-size: 100%;
+        }
+      }
+
 }
-// .marc-foto-5{
-//   @include span-columns(10.4);
-//   @include no-space;
-//   height: 330px; 
-//   background-color: blue;
-//   z-index: 1;
-// }
+#pimes h5{
+  text-align: center;
+  margin-top: 40px;
+}
+#pimes h2{
+  text-align: center;
+  margin:0 auto;
+}
 #pimes .stroke-titol{
   width: 290px;
   margin: 4px auto;
   border-bottom: 2px solid #f5f5f5;
 }
-
-#pimes h2{
-  text-align: center;
-  margin:0 auto;
-}
 #pimes h3{
   text-align: center;
   margin:0 auto;
 }
-#pimes h5{
-  text-align: center;
-  margin-top: 45px;
+
+.serveis1{
+  margin-top: 20px;
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #f5f5f5;
+  @include shift(1)
 }
-
-
 
 /* ==========================================================================
 Gran Empresa
@@ -541,6 +578,25 @@ Entitats Socials
 
 /* ==========================================================================
 Contacte
+========================================================================== */
+#contacte{
+    @include outer-container;
+    margin: -1px auto auto auto;
+    background-color: white;
+    border: 1px solid #f2f2f2;
+    box-sizing: border-box;
+   // Media Queries
+        @include media($m) {
+                  }
+      // 
+      @include media($l) {
+            padding-top: 100px;
+            padding-bottom: 100px;
+                  }
+      // 
+}
+/* ==========================================================================
+Contacte no
 ========================================================================== */
 .mapa {
   width: 50%;
@@ -560,6 +616,11 @@ Contacte
 /* ==========================================================================
  Footer
 ========================================================================== */
+footer {
+  background-color: #2f3542;
+  margin-top:-20px;
+  z-index: 1;
+}
 .stroke-blau{
   color: #5474b9;
   width: 210px;
@@ -573,15 +634,12 @@ copyright{
   display: block;
 }
 
-#contacte {
-  background-color: #2951a7;
-}
-.info{
-  color: #ffffff;
-}
-footer {
-  background-color: #2f3542;
-}
+// #contacte {
+//   background-color: #2951a7;
+// }
+// .info{
+//   color: #ffffff;
+// }
 
 /* ==========================================================================
  Clearfix
