--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,13 +36,13 @@ body{
 }
 .contenidor-esquerra{
   @include span-columns(6);
-  min-height: 600px;
+  min-height: 550px;
   background-color: white;
   position: relative;
 }
 .contenidor-dreta{
   @include span-columns(6);
-  min-height: 600px;
+  min-height: 550px;
   background-color: white;
 }
 ul{
@@ -62,7 +62,7 @@ ul{
 
 .logo img{
   height: 50px;
-	// margin-left: 20px;
+	margin-left: 20px;
   float:left;
 }
 
@@ -95,9 +95,9 @@ nav ul li a:hover{
   text-decoration: none; 
   // border-bottom: thin solid #2951a7;
 }
-// #entitats_socials_link{
-//   margin-right: 20px; 
-// }
+#entitats_socials_link{
+  margin-right: 20px; 
+}
 
 .top-bar { 
 	margin: 0;
@@ -257,6 +257,7 @@ li:last-child{
 
 //IMAGES - RESPONSIVE+RETINA IMAGE DECLARATION
 .marc-foto-1{
+  margin-top: 25px;
   width: 190px;
   height: 365px;
   position: absolute;
@@ -265,7 +266,7 @@ li:last-child{
       @include span-columns(4 of 6);
     }
     @include media($l) {
-      height: 610px;
+      height: 570px;
       @include span-columns(4 of 6);
       @include shift(1);
     }
@@ -396,7 +397,35 @@ li:last-child{
        // RETINA
         @include hidpi(2) {
           background-image: url(../img/autonoms1_L_@2x.jpg);  
-          background-size: 100%;
+          background-size: cover;
+        }
+      }
+}
+.image3{ 
+  z-index: 99;
+  // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+  background-image: url(../img/autonoms2_L.jpg);  
+       // RETINA
+        @include hidpi(2) {
+          background-image: url(../img/autonoms2_L_@2x.jpg);  
+          background-size: cover;
         }
       }
 }
@@ -423,13 +452,6 @@ PIMES i Startups
 .top-fotos{
   @include outer-container;
   @include clearfix;
-  // Media Queries
-      @include media($m) {
-                }
-    // 
-    @include media($l) {
-                }
-    // 
 }
 .contenidor-centre{
   @include span-columns(10);
@@ -554,13 +576,19 @@ PIMES i Startups
   text-align: center;
   margin:0 auto;
 }
-
-.serveis1{
-  margin-top: 20px;
-  padding: 0;
-  list-style-type: none;
-  border: 1px solid #f5f5f5;
-  @include shift(1)
+#pimes .contenidor-esquerra{
+  @include span-columns(6);
+  min-height: 400px;
+  background-color: white;
+  position: relative;
+}
+#pimes .contenidor-dreta{
+  @include span-columns(6);
+  min-height: 400px;
+  background-color: white;
+}
+#pimes .serveis{
+  margin-top: 40px;
 }
 
 /* ==========================================================================
@@ -608,6 +636,64 @@ Gran Empresa
           margin-top: 35px;
                 }
     // 
+}
+.image7{
+    // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+
+  background-image: url(../img/empresa_1_L.jpg);  
+       // RETINA
+        @include hidpi(2) {
+          background-image: url(../img/empresa_1_L_@2x.jpg);  
+          background-size: cover;
+        }
+      }
+
+}
+.image8{
+    // // MOBILE
+  // background-image: url(../img/img1_S.jpg); 
+  //     // RETINA
+  //     @include hidpi(2) {
+  //       background-image: url(../img/img1_S_@2x.jpg);  
+  //       background-size: 100%;
+  //     }
+  // // TABLET
+  // @include media($m) {
+  // background-image: url(../img/img1_M.jpg);  
+  //      // RETINA
+  //       @include hidpi(2) {
+  //         background-image: url(../img/img1_M_@2x.jpg);  
+  //         background-size: 100%;
+  //       }
+  //  }
+ // DESKTOP
+  @include media($l) {
+
+  background-image: url(../img/empresa_2_L.jpg);  
+       // RETINA
+        @include hidpi(2) {
+          background-image: url(../img/empresa_2_L_@2x.jpg);  
+          background-size: cover;
+        }
+      }
+
 }
 #gran-empresa .stroke-titol{
   width: 410px;
@@ -664,6 +750,8 @@ Contacte
     background-color: white;
     border: 1px solid #f2f2f2;
     box-sizing: border-box;
+    z-index: 9;
+    // height: 800px;
    // Media Queries
         @include media($m) {
                   }
@@ -674,23 +762,71 @@ Contacte
                   }
       // 
 }
-/* ==========================================================================
-Contacte no
-========================================================================== */
-.mapa {
-  width: 50%;
-  height: auto;
-  margin: 0 auto;
-  float: left;
-  display: block;
+.tf{
+  color: #2951a7;
+  text-decoration: none;
 }
-.form {
-  width: 50%;
-  height: auto;
-  margin: 0 auto;
-  float: left;
-  display: block;
+#contacte h2{
+  line-height: 1;
+}
+h6{
+  @include SerifPro(400, 2em,#333333);
+  @include no-space;
+  margin-top: 5px;
+}
+.bold{
+  @include SerifPro(700, 1em,#333333);
+}
+.formulari{
+  @include span-columns(10);
+  @include shift(1);
+  margin-top: 30px;
+  border: 1px solid #f2f2f2;
+  background-color: white;
+}
+.camps-formulari{
+  @include span-columns(6 of 10);
+  height:auto;
 
+}
+.localitzacio{
+  @include span-columns(4 of 10);
+  height:auto;
+}
+fieldset{
+  @include span-columns(4.5 of 6);
+  @include shift(.5);
+  margin-top:40px;
+}
+
+label{
+   @include opensans(600, 1.6em, #333333);
+   @include clearfix;
+}
+.cell{
+  @include span-columns(4.5 of 4.5);
+  @include clearfix;
+}
+input{
+  @include span-columns(2.5 of 4.5);
+  height: 58px;
+  border: 1px solid #f2f2f2;
+  margin: 10px auto 20px auto;
+  padding: 10px;
+  border-radius: 2px;
+  box-shadow:inset 1px 12px 8px -7px #f5f5f5;
+  @include opensans(400, 1.6em, #333333);
+}
+#comments{
+  width: 100%;
+  height: 150px;
+  border: 1px solid #f2f2f2;
+  margin: 10px auto 20px auto;
+  padding: 10px;
+  padding-top: 10px;
+  border-radius: 2px;
+  box-shadow:inset 1px 12px 8px -7px #f5f5f5;
+  @include opensans(400, 1.6em, #333333);  
 }
 /* ==========================================================================
  Footer
@@ -699,6 +835,7 @@ footer {
   background-color: #2f3542;
   margin-top:-20px;
   z-index: 1;
+  width:100%;
 }
 .stroke-blau{
   color: #5474b9;
@@ -712,13 +849,9 @@ copyright{
   text-align: center;
   display: block;
 }
+.socialmedia{
 
-// #contacte {
-//   background-color: #2951a7;
-// }
-// .info{
-//   color: #ffffff;
-// }
+}
 
 /* ==========================================================================
  Clearfix
